--- a/index.html
+++ b/index.html
@@ -1,180 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <title>Responsive Vertical Video Slider</title>
-  <style>
-    body,
-    html {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-size: 1rem;
-      overflow: hidden;
-    }
-
-    .swiper-container {
-      width: 100vw;
-      height: 100vh;
-      margin: 0;
-      padding: 0;
-      position: relative;
-      overflow-y: auto;
-      scrollbar-width: thin; 
-      scrollbar-color: transparent;
-    }
-
-   
-    .swiper-container::-webkit-scrollbar {
-      width: 6px; 
-    }
-
-    .swiper-container::-webkit-scrollbar-track {
-      background: transparent;
-    }
-
-    .swiper-container::-webkit-scrollbar-thumb {
-      background-color: rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-      border: 1px solid transparent;
-    }
-
-    .swiper-slide {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0;
-      margin: 0;
-      height: 100vh;
-    }
-
-    .swiper-slide video {
-      width: 100%;
-      height: 100%;
-      object-fit: fill;
-    }
-
-   
-    @media (max-width: 768px) {
-      .swiper-container,
-      .swiper-slide,
-      .swiper-wrapper {
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vertical Video Slider</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <style>
+      body,
+      html {
         margin: 0;
         padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        font-family: Arial, sans-serif;
       }
 
-      .swiper-slide {
+      .swiper-container {
+        width: 100%;
         height: 100vh;
       }
 
-      .swiper-slide video {
-        width: 100%;
-        height: 100%;
-        object-fit: fill;
-      }
-
-      .transparency-slider {
-        width: 250px;
-        bottom: 15px;
-      }
-    }
-
-    @media (max-width: 576px) {
-      .swiper-container,
-      .swiper-slide,
       .swiper-wrapper {
-        margin: 0;
-        padding: 0;
+        display: flex;
+        flex-direction: column;
       }
 
       .swiper-slide {
-        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
       }
 
-      .swiper-slide video {
+      video {
         width: 100%;
         height: 100%;
-        object-fit: fill;
+        object-fit: cover;
       }
 
-      .transparency-slider {
-        width: 200px;
-        bottom: 10px;
+      .swiper-scrollbar {
+        width: 8px;
+        background: rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
       }
-    }
-  </style>
-</head>
 
-<body>
-  <!-- Swiper -->
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <video src="01.mp4" autoplay loop muted></video>
+      .swiper-scrollbar-drag {
+        background: #ffffff5b;
+        border-radius: 4px;
+      }
+
+      @media (max-width: 768px) {
+        .swiper-container {
+          height: 100vh;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .swiper-container {
+          height: 60vh;
+        }
+
+        .swiper-scrollbar {
+          width: 6px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <video src="01.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="02.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="03.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="04.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="05.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="06.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="07.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="08.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="09.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="10.mp4" autoplay muted loop></video>
+        </div>
+        <div class="swiper-slide">
+          <video src="11.mp4" autoplay muted loop></video>
+        </div>
       </div>
-      <div class="swiper-slide">
-        <video src="02.mp4" autoplay loop muted></video>
-      </div>
-      <div class="swiper-slide">
-        <video src="03.mp4" autoplay loop muted></video>
-      </div>
-      <div class="swiper-slide">
-        <video src="04.mp4" autoplay loop muted></video>
-      </div>
-      <div class="swiper-slide">
-        <video src="05.mp4" autoplay loop muted></video>
-      </div>
-      <div class="swiper-slide">
-        <video src="06.mp4" autoplay loop muted></video>
-      </div>
-      <div class="swiper-slide">
-        <video src="07.mp4" autoplay loop muted></video>
-      </div>
-      <div class="swiper-slide">
-        <video src="08.mp4" autoplay loop muted></video>
-      </div>
-      <div class="swiper-slide">
-        <video src="09.mp4" autoplay loop muted></video>
-      </div>
-      <div class="swiper-slide">
-        <video src="10.mp4" autoplay loop muted></video>
-      </div>
-      <div class="swiper-slide">
-        <video src="11.mp4" autoplay loop muted></video>
-      </div>
+      <!-- Custom scrollbar -->
+      <div class="swiper-scrollbar"></div>
     </div>
 
-   
-    <div class="transparency-slider" style="position: absolute; right: 10px; bottom: 20px;">
-      <label for="transparency">Transparency</label>
-      <input type="range" id="transparency" min="0" max="100" value="100" oninput="adjustTransparency(this.value)">
-    </div>
-  </div>
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script>
-    var swiper = new Swiper('.swiper-container', {
-      direction: 'vertical',
-      slidesPerView: 1,
-      spaceBetween: 0,
-      mousewheel: true,
-    });
-
-    function adjustTransparency(value) {
-      var videos = document.querySelectorAll('.swiper-slide video');
-      videos.forEach(function (video) {
-        video.style.opacity = value / 100;
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const swiper = new Swiper(".swiper-container", {
+          direction: "vertical",
+          slidesPerView: 1,
+          spaceBetween: 0,
+          mousewheel: true,
+          scrollbar: {
+            el: ".swiper-scrollbar",
+            draggable: true,
+            hide: false,
+          },
+        });
       });
-    }
-  </script>
-</body>
-
+    </script>
+  </body>
 </html>
